...
            const BottomNavigationBarItem(
              icon: Icon(PhosphorIcons.clock_counter_clockwise_bold),
              label: 'Riwayat',
            ),
            const BottomNavigationBarItem(
              icon: Icon(
                key: Key('profile-button'),
                PhosphorIcons.user_bold),
              label: 'Profil',
            ),
          ],
        ),
      ),
...
